--- a/index.html
+++ b/index.html
@@ -149,6 +149,9 @@ const SPRITE_URL = 'assets/img/pawns/maus-blue-walk.png';
 const SPRITE_FRAMES = 8, SPRITE_FPS_WALK = 10, SPRITE_PAWN_SIZE = 48;
 const rnd = (max, min=1) => min + Math.floor((crypto.getRandomValues?.(new Uint32Array(1))[0] ?? Math.random()*2**32) / 2**32 * (max-min+1));
 
+const STORAGE_KEY = 'ocaGameState';
+const STORAGE_VERSION = 1;
+
 // ===== Orden exacto del tablero =====
 const LAYOUT = [
   {id:'start_pad', kind:'start', x:58.28, y:647.09, w:184.51, h:102.64},
@@ -204,6 +207,126 @@ const Z = {
 // ===== Estado =====
 let state = null; // { players:[{id,name,pos}], currentIdx }
 let overlayOn = false;
+let storedStateCache = null;
+
+function getLocalStorage(){
+  try{
+    return window.localStorage;
+  }catch(e){
+    console.warn('localStorage no disponible', e);
+    return null;
+  }
+}
+
+function createInitialState(seed=null){
+  return {
+    players:[{id:'1', name:'J1', pos:0, skipTurns:0}],
+    currentIdx:0,
+    history:[],
+    usedQuestionIds:[],
+    rngSeed: seed ?? null
+  };
+}
+
+function normalizePlayers(list){
+  if(!Array.isArray(list) || !list.length){
+    return createInitialState().players;
+  }
+  return list.map((p,i)=>({
+    id: String(p?.id ?? (i+1)),
+    name: String(p?.name ?? `J${i+1}`),
+    pos: Number.isFinite(p?.pos) ? p.pos : 0,
+    skipTurns: Number.isFinite(p?.skipTurns) ? p.skipTurns : 0
+  }));
+}
+
+function hydrateState(raw){
+  const seed = raw?.rngSeed ?? null;
+  const base = createInitialState(seed);
+  base.players = normalizePlayers(raw?.players);
+  const maxIdx = Math.max(0, base.players.length - 1);
+  const idx = Number.isFinite(raw?.currentIdx) ? raw.currentIdx : 0;
+  base.currentIdx = Math.min(Math.max(0, idx), maxIdx);
+  base.history = Array.isArray(raw?.history) ? raw.history.map(String) : [];
+  base.usedQuestionIds = Array.isArray(raw?.usedQuestionIds) ? raw.usedQuestionIds.map(String) : [];
+  return base;
+}
+
+function getSerializableState(s){
+  if(!s) return null;
+  return {
+    players: Array.isArray(s.players) ? s.players.map(p=>({
+      id: p.id,
+      name: p.name,
+      pos: p.pos,
+      skipTurns: p.skipTurns ?? 0
+    })) : [],
+    currentIdx: s.currentIdx ?? 0,
+    history: Array.isArray(s.history) ? [...s.history] : [],
+    usedQuestionIds: Array.isArray(s.usedQuestionIds) ? [...s.usedQuestionIds] : [],
+    rngSeed: s.rngSeed ?? null
+  };
+}
+
+function updateContinueButton(){
+  const btn = document.getElementById('btnContinue');
+  if(!btn) return;
+  btn.style.display = storedStateCache ? 'inline-flex' : 'none';
+}
+
+function wipeSave(){
+  const ls = getLocalStorage();
+  if(ls){
+    try{ ls.removeItem(STORAGE_KEY); }catch(e){ console.warn('No se pudo borrar el guardado', e); }
+  }
+  storedStateCache = null;
+  updateContinueButton();
+}
+
+function readStoredState(){
+  const ls = getLocalStorage();
+  if(!ls) return null;
+  const raw = ls.getItem(STORAGE_KEY);
+  if(!raw) return null;
+  try{
+    const parsed = JSON.parse(raw);
+    if(parsed?.version !== STORAGE_VERSION || typeof parsed.state !== 'object' || parsed.state===null){
+      wipeSave();
+      return null;
+    }
+    return parsed.state;
+  }catch(e){
+    console.warn('Guardado corrupto, se limpia', e);
+    wipeSave();
+    return null;
+  }
+}
+
+function refreshStoredStateCache(){
+  storedStateCache = readStoredState();
+  updateContinueButton();
+}
+
+function persistState(){
+  if(!state) return;
+  const ls = getLocalStorage();
+  if(!ls) return;
+  const serializable = getSerializableState(state);
+  try{
+    ls.setItem(STORAGE_KEY, JSON.stringify({version:STORAGE_VERSION, state:serializable}));
+    storedStateCache = serializable;
+    updateContinueButton();
+  }catch(e){
+    console.warn('No se pudo guardar la partida', e);
+  }
+}
+
+function loadStoredState(){
+  if(!storedStateCache){
+    storedStateCache = readStoredState();
+  }
+  return storedStateCache ? hydrateState(storedStateCache) : null;
+}
 
 // ===== Helpers SVG =====
 function svgImage(href, x, y, w, h){
@@ -255,6 +378,54 @@ document.addEventListener('keydown', (e)=>{
   }
 });
 
+function renderHistoryFromState(){
+  const logEl = document.getElementById('log');
+  if(!logEl) return;
+  logEl.innerHTML = '';
+  const entries = Array.isArray(state?.history) ? state.history : [];
+  entries.forEach(text=>{
+    const item = document.createElement('div');
+    item.textContent = text;
+    logEl.appendChild(item);
+  });
+  logEl.scrollTop = logEl.scrollHeight;
+}
+
+function announce(msg){
+  const live = document.getElementById('live');
+  if(live){ live.textContent = msg; }
+}
+
+function addHistoryEntry(text){
+  if(!state) return;
+  if(!Array.isArray(state.history)) state.history = [];
+  state.history.push(text);
+  renderHistoryFromState();
+  announce(text);
+  persistState();
+}
+
+function markQuestionUsed(id){
+  if(!state || id===undefined || id===null) return;
+  if(!Array.isArray(state.usedQuestionIds)) state.usedQuestionIds = [];
+  const key = String(id);
+  if(state.usedQuestionIds.includes(key)) return;
+  state.usedQuestionIds.push(key);
+  persistState();
+}
+
+function updateHud(){
+  const turnInfo = document.getElementById('turnInfo');
+  if(!turnInfo) return;
+  if(!state || !Array.isArray(state.players) || !state.players.length){
+    turnInfo.textContent = '—';
+    return;
+  }
+  const idx = Math.min(Math.max(0, state.currentIdx ?? 0), state.players.length-1);
+  const current = state.players[idx];
+  turnInfo.textContent = `${current.name} (casilla ${current.pos})`;
+}
+
 // ===== Peones (pos 0 -> start_pad) =====
 function placePawn(p){
   const coords = window.BOARD_COORDS || [];
@@ -272,6 +443,13 @@ function placePawn(p){
   }
   el.style.transform = `translate(${(cx - SPRITE_PAWN_SIZE/2)}px, ${(cy - SPRITE_PAWN_SIZE/2)}px)`;
 }
+
+function refreshPawns(){
+  document.querySelectorAll('.pawn').forEach(el=>el.remove());
+  if(!state || !Array.isArray(state.players)) return;
+  state.players.forEach(placePawn);
+}
+
 function startWalk(el){ if(!el) return; clearInterval(el._timer); let f=0; el._timer=setInterval(()=>{ el.style.backgroundPosition = `-${f*SPRITE_PAWN_SIZE}px 0`; f=(f+1)%SPRITE_FRAMES; }, 1000/SPRITE_FPS_WALK); }
 function stopWalk(el){ if(el&&el._timer) clearInterval(el._timer); }
 async function moveSteps(p,steps){
@@ -281,12 +459,32 @@ async function moveSteps(p,steps){
   while(p.pos !== target){ p.pos += (p.pos<target?1:-1); placePawn(p); await new Promise(r=>setTimeout(r,110)); }
   stopWalk(document.getElementById('pawn-'+p.id));
 }
+
+function showGameScreen(){
+  document.getElementById('menu').style.display='none';
+  const game=document.getElementById('game');
+  game.style.display='grid';
+  renderBoard();
+  refreshPawns();
+  renderHistoryFromState();
+  updateHud();
+  const dieEl=document.getElementById('die');
+  if(dieEl) dieEl.textContent='—';
+}
 async function roll(){
-  const p = state.players[state.currentIdx];
+  if(!state || !Array.isArray(state.players) || !state.players.length) return;
+  const idx = Math.min(Math.max(0, state.currentIdx ?? 0), state.players.length-1);
+  const p = state.players[idx];
   const dieEl = document.getElementById('die');
-  dieEl.textContent='…'; let c=0; await new Promise(res=>{ const t=setInterval(()=>{ dieEl.textContent = 1 + (c%6); if(++c>10){ clearInterval(t); res(); } },70); });
+  if(!dieEl) return;
+  dieEl.textContent='…';
+  let c=0;
+  await new Promise(res=>{ const t=setInterval(()=>{ dieEl.textContent = 1 + (c%6); if(++c>10){ clearInterval(t); res(); } },70); });
   const n = 1 + Math.floor(Math.random()*6); dieEl.textContent=n;
   await moveSteps(p,n);
+  const msg = `${p.name} avanza ${n} ${n===1?'casilla':'casillas'}.`;
+  addHistoryEntry(msg);
+  updateHud();
 }
 
 // ===== Tests (actualizados a índice base 0) =====
@@ -295,7 +493,7 @@ function runTests(){
   renderBoard();
   ok('BOARD_COORDS == LAYOUT', (window.BOARD_COORDS||[]).length===LAYOUT.length);
   // pos 0 -> start_pad
-  state={players:[{id:'1',name:'J1',pos:0}],currentIdx:0}; placePawn(state.players[0]);
+  state=createInitialState(); placePawn(state.players[0]);
   ok('Jugador inicia en pos 0 (start_pad)', state.players[0].pos===0);
   // overlay toggle
   const svg=document.getElementById('boardSvg'); overlayOn=true; drawOverlay(svg);
@@ -318,16 +516,38 @@ function runTests(){
   playersSetup.innerHTML = `<div class="player-card"><strong>Jugador 1</strong><div class="small">Índice base 0</div></div>`;
 
   const btnStart = document.getElementById('btnStart');
+  const btnContinue = document.getElementById('btnContinue');
+  const btnWipe = document.getElementById('btnWipe');
   const btnRoll  = document.getElementById('btnRoll');
   const btnTests = document.getElementById('btnTests');
+  const seedInput = document.getElementById('seed');
+
+  refreshStoredStateCache();
 
   btnStart.onclick = ()=>{
-    state = { players:[{id:'1', name:'J1', pos:0, skipTurns:0}], currentIdx:0 };
-    document.getElementById('menu').style.display='none';
-    const game=document.getElementById('game'); game.style.display='grid';
-    renderBoard();
-    placePawn(state.players[0]);
+    const seedVal = (seedInput?.value || '').trim();
+    state = createInitialState(seedVal || null);
+    showGameScreen();
+    persistState();
+    const startMsg = seedVal ? `Nueva partida iniciada (semilla ${seedVal}).` : 'Nueva partida iniciada.';
+    addHistoryEntry(startMsg);
   };
+  if(btnContinue){
+    btnContinue.onclick = ()=>{
+      const loaded = loadStoredState();
+      if(!loaded) return;
+      state = loaded;
+      showGameScreen();
+      persistState();
+      announce('Partida cargada.');
+    };
+  }
+  if(btnWipe){
+    btnWipe.onclick = ()=>{
+      wipeSave();
+      announce('Guardado eliminado.');
+    };
+  }
   btnRoll.onclick = roll;
   btnTests.onclick = runTests;
 })();
